--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Using Attributes Quiz</title>
     <style>
         body {
-            font-family: Arial; 
+            font-family: Arial;
         }
         #to-do-list {
             width: 400px;
@@ -20,7 +20,7 @@
         }
         .underline {
             text-decoration: underline;
-        } 
+        }
         .list {
             list-style-type: circle;
             text-align: left;
@@ -35,27 +35,27 @@
     </style>
 </head>
 <body>
-    <div>
-        <h1>My To-Do Listtt</h1>
-        <h2>Chores</h2>
+    <div id="to-do-list">
+        <h1 class="title">My To-Do List</h1>
+        <h2 class="title underline">Chores</h2>
         <ul class="list">
             <li>load the diswasher</li>
             <li>vucuum living room</li>
             <li>take out garbage</li>
             <li class="finished">sweep the garage</li>
         </ul>
-        <h2>Homework</h2>
+        <h2 class="title underline">Homework</h2>
         <ul class="list">
-            <li>brainstorm ideas for Science project</li>
-            <li>finish Calculus 2 problems</li>
+            <li class="finished">brainstorm ideas for Science project</li>
+            <li class="finished">finish Calculus 2 problems</li>
             <li>study for Programming midterm :P</li>
             <li>finish Project 0 on Udacity FEND</li>
             <li class="finished">find sources for Biology research paper</li>
             <li>read first two chapters of The Art of War</li>
         </ul>
-        <h2>Party</h2>
+        <h2 class="title underline">Party</h2>
         <ul class="list">
-            <li>send out invitations</li>
+            <li class="finished">send out invitations</li>
             <li>reserve party room at restaurant</li>
             <li>order the cake!</li>
         </ul>
